openshift/base/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      tier: database
  template:
    metadata:
      labels:
        tier: database
    spec:
      containers:
      - name: mysql
        image: bookstore-db:1.0.0
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: tmp
          mountPath: /tmp
        - name: run
          mountPath: /var/run/mysqld
      volumes:
      - name: tmp
        emptyDir: {}
      - name: run
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:              # <--- THIS DASH IS REQUIRED
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
