openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookstore-frontend
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
